syntax = "proto3";

package snp.v1;
option go_package = ".;pb";

import "customer_message.proto";


message FindCustomersResponse { repeated Customer customers = 1; }

message SearchCustomerResponse {
  repeated Customer data = 1;
  uint32 totalRecords = 2;
}

message SearchCustomerRequest {
  string search_text = 1;
  string sort_column = 2;
  string sort_direction = 3;
  uint32 per_page = 4;
  uint32 current_page = 5;
  repeated string fields =  6;
}

message GetCustomerRequest { string id = 1; }

message GetCustomerResponse { Customer customer = 1; }

message CreateCustomerRequest {
  string title = 1;
  string  person = 2;
  string  address = 4;
  string  phone = 5;
  string email = 6;
  bool muted = 7;
  uint32 size_limit = 8;
}

message UpdateCustomerRequest {
  uint64 id = 1;
  string title = 2;
  string  person = 3;
  string  address = 4;
  string  phone = 5;
  string email = 6;
  bool muted = 7;
  uint32 size_limit = 8;
}

message CreateCustomerResponse { Customer customer = 1; }

message UpdateCustomerResponse { Customer customer = 1; }


service CustomerService {

  rpc SearchCustomer(SearchCustomerRequest) returns (SearchCustomerResponse) {
  }

  rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse) {
  }

  rpc UpdateCustomer(UpdateCustomerRequest) returns (UpdateCustomerResponse) {
  }

  rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse) {
  }
}